# testcplus

cplus1/: gocompile.sh  makefile  readme.txt
cplus1/src/: test.cpp
cplus2/: gocompile1.sh  run.sh
cplus2/src/: head.cpp  test1.cpp
cplus3/: gocompile1.sh
cplus3/src/: head.cpp  test1.cpp
fileutils/: NH.04.txt  NH04.TXT  gocompile1.sh  jh03.txt  wrNH04.TXT
fileutils/src/: test1.cpp
propertispaser/: makefile  system.properties
propertispaser/src/: propertispaser.cpp  test1.cpp
propertispaser/src/include/: stringutils.h
stringutils/src/: test1.cpp
tcptest1/clienttest1/: gocompile1.sh  runclient.sh  system.properties
tcptest1/clienttest1/src/: client.cpp  stringutils.cpp
tcptest1/clienttest1/src/include/: propertispaser.h
tcptest1/servertest1/: gocompile1.sh
tcptest1/servertest1/src/: server.cpp
tcptest2/clienttest2/: gocompile1.sh  runclient.sh
tcptest2/clienttest2/src/: client.cpp
tcptest2/servertest2/: runserver.sh
testautotool2/: Makefile.am  Makefile.in  configure  configure.in  configure.scan  gocompile1.sh
testautotool2/autom4te.cache/: output.0  requests  traces.0  traces.1
testautotool2/include/: stringutils.h
testautotool2/src/: stringutils.cpp
